# nes

./: pyproject.toml
arbne/: cpu.py
arbne/tests/: arbne.py  arbne_cpu_test.py
